# duckdb_sedona

./: COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
benchmarks/: BENCHMARKS.md
ci/: package-and-smoke.sh
src/: bridge.rs  dispatch.rs  dump.rs  functions.rs  geometry.rs  geos_backend.rs  lib.rs  raster.rs  registry.rs
tests/: all_functions.sql  edge_cases.sql  fidelity.sql  raster.sql  run_sql.sh  sedona_bridge.sql
tests/reference/: month1_fixtures.sql
tools/: catalog_audit.py
